# Hydro-Knight

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
data/: blocklist.txt
data/annotations/: .gitkeep
data/manifests/: pool_footage.jsonl
docs/: COLAB_TRAINING.md  DATA_SOURCING.md
scripts/: make_pose_figure.py  rung2_demo.py  rung3_demo.py
src/aqua_anomaly/annotate/: annotator.py
src/aqua_anomaly/features/: windows.py
src/aqua_anomaly/ingest/: blocklist.py  collect.py  download.py  manifest.py  register_local.py
src/aqua_anomaly/preprocess/: extract_pose.py  pose_spike.py  tiled_pose.py
src/hydro_knight/annotate/: annotator.py
src/hydro_knight/features/: normalize.py
src/hydro_knight/ingest/: collect.py  download.py  register_local.py
src/hydro_knight/models/: autoencoder.py  tcn_autoencoder.py
src/hydro_knight/preprocess/: extract_pose.py  pose_spike.py  tracking.py
tests/: test_manifest.py  test_normalize.py  test_windows.py
