[project]
name = "hydro-knight"
version = "0.1.0"
description = "Pose-based anomaly detection for swimming-pool drowning safety."
readme = "README.md"
requires-python = ">=3.11"
# AGPL-3.0 because this depends on Ultralytics YOLO (AGPL-3.0); a public work
# that links AGPL code must itself be AGPL. SPDX expression per PEP 639.
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    # --- Data collection ---
    "yt-dlp>=2024.1.1",        # YouTube metadata search and video download
    "certifi>=2024.0.0",       # CA bundle for SSL verification (yt-dlp HTTPS)
    # --- Annotation tool ---
    "opencv-python>=4.9.0",    # video frame reading / drawing
    "Pillow>=10.0.0",          # OpenCV frames -> tkinter-compatible images
    # --- Pose extraction (preprocess/) ---
    "ultralytics>=8.4.0",      # YOLO-pose detection (pulls in torch)
    "supervision>=0.29.0",     # Detections container feeding the tracker
    "trackers>=2.4.0",         # ByteTrack/BoT-SORT over SAHI-merged detections
    # --- Feature/model pipeline ---
    "numpy>=1.26.0",
    "pandas>=2.2.0",           # assemble keypoint tables
    "pyarrow>=15.0.0",         # Parquet file format for keypoint storage
    "scikit-learn>=1.4.0",     # ROC-AUC / PR-AUC evaluation metrics
]

[project.optional-dependencies]
# Alt pose backend, only needed to reproduce the YOLO-vs-MediaPipe spike.
# The backend decision (YOLO) is made, so this is kept out of the default install.
spike = ["mediapipe>=0.10.0"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
# Look for tests only under tests/, and treat plain `assert` as the assertion
# mechanism (pytest rewrites them into rich failure messages).
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: tell the build backend where the importable package lives, so
# `uv sync` installs it editable and `import hydro_knight` works with no PYTHONPATH.
[tool.hatch.build.targets.wheel]
packages = ["src/hydro_knight"]
